--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -76,6 +76,7 @@ yum makecache                       # 建立索引
 可以同时开启密码认证和公钥认证
 
 ```sh
+# /etc/ssh/sshd_config
 # Port 22  sshd服务端口，建议改掉
 # PubkeyAuthentication yes 允许公钥登陆，公钥配置到AuthorizedKeysFile指定的文件
 # PermitRootLogin yes 允许root登陆
@@ -90,6 +91,7 @@ service sshd restart
 ```bash
 chmod 700 ~/.ssh
 chmod 600 ~/.ssh/authorized_keys
+chmod 600 ~/.ssh/keys/ -R
 ```
 
 本地机器配置，`C:\Users\xxx\.ssh\config` 文件配置好后直接`ssh aliyun`即可登陆
@@ -110,7 +112,7 @@ Host aliyun
 locale -a
 # 如果没有
 yum install kde-l10n-Chinese
-# 修改locale文件 LANG=zh_CN.UTF8
+# 修改locale文件 LANG=zh_CN.utf8
 # 重启生效
 vi /etc/locale.conf
 ```
@@ -641,6 +643,14 @@ ln -s /usr/local/bin/python3.7 /usr/bin/python3
 ln -s /usr/local/bin/pip3.7 /usr/bin/pip3
 pip3 install pip -U
 pip3 config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+```
+
+配置国内源，`~/.pip/pip.conf`文件不存在新建即可
+
+```conf
+[global]
+index-url = http://mirrors.cloud.tencent.com/pypi/simple
+trusted-host = mirrors.cloud.tencent.com
 ```
 
 ## Shadowsocks
